--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                   </a>
           <ul class="left hide-on-med-and-down">
             <li><a href="index.html">Accueil</a></li>
-            <li><a href="page2.html">Decouvrez notre ragion</a></li>
+            <li><a href="page2.html">Decouvrez notre région</a></li>
             <li><a href="page3.html">Réservation</a></li>
           </ul>
 
